fix(i18n-en): correct order of placeholders in schedule adherence messages

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -2,9 +2,9 @@
     "vehicle_popup": {
         "train": "Train {{trainNumber}}",
         "schedule_adherence": {
-            "early": "Early {{formattedDuration}}",
+            "early": "{{formattedDuration}} early",
             "on_time": "On time",
-            "late": "Late {{formattedDuration}}"
+            "late": "{{formattedDuration}} late"
         },
         "status": {
             "in_transit": "In transit",
